# jrnz

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  clean.sh  debug_build.sh  instructions.cpp  instructions.hpp  main.cpp  memory.hpp  run_jrnz.sh  run_tests.sh
include/: common.hpp
src/: beeper.hpp  bus.cpp  bus.hpp  common.hpp  debugger.cpp  debugger.hpp  decoder.cpp  decoder.hpp  instructions.cpp  instructions.hpp  keyboard.cpp  keyboard.hpp  main.cpp  memory.hpp  options.cpp  options.hpp  ports.hpp  register.cpp  register.hpp  registers.hpp  storage_element.cpp  storage_element.hpp  system.cpp  system.hpp  test.hpp  test_adc.cpp  test_main.cpp  test_sbc.cpp  ula.cpp  ula.hpp  z80.cpp  z80.hpp
src/formats/: format_sna.cpp  format_z80.cpp  sna.cpp
src/z80/: decoder.cpp  instructions.cpp  instructions.hpp  storage_element.cpp  storage_element.hpp  z80.cpp  z80.hpp
tests/: test.hpp  test_adc.cpp  test_neg.cpp  test_sbc.cpp
utils/: dump_sna_info.py  dump_z80_info.py
